sandbox-codebase/objects/heymarket__List_Config__c/heymarket__List_Config__c.object-meta.xml
<CustomObject>
    <label>List Config</label>
    <nameField>
        <displayFormat>ListConfig-{0000}</displayFormat>
        <label>List Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>