sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>