sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Field_Type__c</fullName>
    <description>Datatype of Salesforce field</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>ADDRESS</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>