sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>