sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this checkbox will be used to check if a list config is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>