sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__List_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__List_Id__c</fullName>
    <label>List Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>