sandbox-codebase/objects/heymarket__List_Config__c/fields/heymarket__Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Object__c</fullName>
    <label>Sync Object</label>
    <referenceTo>heymarket__Sync_Object__c</referenceTo>
    <relationshipLabel>List Configs</relationshipLabel>
    <relationshipName>List_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>